# aarch64_sim

./: .clag-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
docs/: architecture_hdl.md  decoding_instruction_formats.md  system_spec.md
include/: cpu.h  decoder.h  executor.h  memory.h  registers.h
src/: CMakeLists.txt  decoder.cpp  executor.cpp  memory.cpp  registers.cpp
tests/: CMakeLists.txt  test_decoder.cpp  test_executor.cpp  test_ldr.cpp  test_memory.cpp  test_registers.cpp
